@@ -21,13 +21,15 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.DialogWrapper;
 import com.intellij.openapi.wm.ToolWindowManager;
 import com.intellij.unscramble.AnalyzeStacktraceUtil;
-import com.samebug.clients.common.api.entities.search.CreatedSearch;
-import com.samebug.clients.common.api.exceptions.BadRequest;
-import com.samebug.clients.common.api.exceptions.SamebugClientException;
-import com.samebug.clients.common.api.exceptions.UserUnauthenticated;
 import com.samebug.clients.common.search.StackTraceListener;
 import com.samebug.clients.common.search.StackTraceMatcher;
 import com.samebug.clients.common.services.SearchService;
+import com.samebug.clients.http.entities.jsonapi.CreatedSearchResource;
+import com.samebug.clients.http.entities.search.Search;
+import com.samebug.clients.http.entities.search.StackTraceInfo;
+import com.samebug.clients.http.exceptions.BadRequest;
+import com.samebug.clients.http.exceptions.SamebugClientException;
+import com.samebug.clients.http.exceptions.UserUnauthenticated;
 import com.samebug.clients.idea.components.application.IdeaSamebugPlugin;
 import com.samebug.clients.idea.messages.FocusListener;
 import com.samebug.clients.idea.tracking.Events;
@@ -40,11 +42,10 @@ import org.jetbrains.annotations.Nullable;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
-final public class AnalyzeDialog extends DialogWrapper {
-    final static Logger LOGGER = Logger.getInstance(AnalyzeDialog.class);
+public final class AnalyzeDialog extends DialogWrapper {
+    static final Logger LOGGER = Logger.getInstance(AnalyzeDialog.class);
     final Project myProject;
     JPanel panel;
     final JPanel warningPanel;
@@ -108,7 +109,7 @@ final public class AnalyzeDialog extends DialogWrapper {
         return new Action[]{getCancelAction(), searchAction};
     }
 
-    final protected class SamebugSearch extends DialogWrapperAction implements DumbAware {
+    protected final class SamebugSearch extends DialogWrapperAction implements DumbAware {
 
         public SamebugSearch() {
             super(MessageService.message("samebug.menu.analyze.dialog.samebugButton"));
@@ -127,10 +128,11 @@ final public class AnalyzeDialog extends DialogWrapper {
             }
             try {
                 // NOTE: this search post happens on the UI thread, but we own the UI thread as long as the dialog is opened.
-                CreatedSearch result = searchService.search(trace);
-                final int searchId = result.getSearchId();
+                CreatedSearchResource result = searchService.search(trace);
+                Search search = result.getData();
+                final int searchId = search.getId();
 
-                if (result.getStackTraceId() == null) displayError(MessageService.message("samebug.menu.analyze.dialog.error.textSearch"));
+                if (!(search.getQueryInfo() instanceof StackTraceInfo)) displayError(MessageService.message("samebug.menu.analyze.dialog.error.textSearch"));
                 else {
                     myProject.getMessageBus().syncPublisher(FocusListener.TOPIC).focusOnSearch(searchId);
                     TrackingService.trace(Events.searchSucceedInSearchDialog(searchId));
@@ -157,7 +159,7 @@ final public class AnalyzeDialog extends DialogWrapper {
     }
 
     // TODO using the serious parser, get the typename and message and use them for google search
-    final protected class GoogleSearch extends DialogWrapperAction implements DumbAware {
+    protected final class GoogleSearch extends DialogWrapperAction implements DumbAware {
 
         public GoogleSearch() {
             super(MessageService.message("samebug.menu.analyze.dialog.googleButton"));
@@ -166,17 +168,13 @@ final public class AnalyzeDialog extends DialogWrapper {
         @Override
         protected void doAction(ActionEvent e) {
             final String trace = myEditorPanel.getText();
-            try {
-                URL url = new URL("https://www.google.hu/search?q=" + trace);
-                BrowserUtil.browse(url);
-            } catch (MalformedURLException e1) {
-                LOGGER.warn("Failed to open browser for google search", e1);
-            }
+            URI uri = URI.create("https://www.google.hu/search?q=" + trace);
+            BrowserUtil.browse(uri);
         }
     }
 
     // TODO get the serious parser
-    final protected class Parser implements StackTraceListener {
+    protected final class Parser implements StackTraceListener {
         final StackTraceMatcher parser;
         boolean found;
 
